add evaluation improvements